--- a/static/index.html
+++ b/static/index.html
@@ -12,13 +12,15 @@
       box-sizing: border-box;
     }
     h1 {
-      margin:20px auto;
+      margin:5vmin auto;
       text-align: center;
+      font-size:5vmin;
     }
     ul{
       margin:0 auto;
-      margin-top: 20px;
-      width:150px;
+      margin-top: 5vmin;
+      width:70vmin;
+      font-size: 5vmin;
     }
   </style>
 </head>
@@ -27,6 +29,7 @@
 <hr>
 <ul>
   <li><a href="/count.html">计数器</a></li>
+  <li><a href="/chat.html">聊天室示例</a></li>
 </ul>
 </body>
 </html>
