--- a/static/index.html
+++ b/static/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
-  <title>Redis Demo</title>
-  <style>
-    *{
-      margin:0;
-      padding:0;
-      box-sizing: border-box;
-    }
-    h1 {
-      margin:5vmin auto;
-      text-align: center;
-      font-size:5vmin;
-    }
-    ul{
-      margin:0 auto;
-      margin-top: 5vmin;
-      width:70vmin;
-      font-size: 5vmin;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
+    <title>Redis Demo</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        h1 {
+            margin: 3vh auto;
+            text-align: center;
+            font-size: 5vmin;
+        }
+
+        ul {
+            margin: 0 auto;
+            margin-top: 5vmin;
+            width: 70vmin;
+            font-size: 5vmin;
+        }
+    </style>
 </head>
 <body>
 <h1>Redis 示例</h1>
 <hr>
 <ul>
-  <li><a href="/count.html">计数器</a></li>
-  <li><a href="/chat.html">聊天室示例</a></li>
+    <li><a href="/count.html">计数器</a></li>
+    <li><a href="/chat.html">聊天室示例</a></li>
 </ul>
 </body>
 </html>
