--- a/static/count.html
+++ b/static/count.html
@@ -47,7 +47,7 @@
             font-size: 5vmin;
             vertical-align: top;
             border-radius: 1vh;
-
+            cursor: pointer;
             background-color: #4CAF50; /* Green */
             border: none;
             color: white;
