--- a/static/chat.html
+++ b/static/chat.html
@@ -155,6 +155,14 @@ ws.redis = redis.newClient();
 ws.on('message',function(message){
     ws.redis.publish('public',message);
 });
+
+//将消息压入队列
+ws.redis.lpush("last",message);
+ws.redis.ltrim("last",0,4);
+
+//获取最后5条消息
+Client.lrange("last",0,4, ......
+
 </pre>
 
 </body>
