微调字体大小

--- a/static/chat.html
+++ b/static/chat.html
@@ -40,7 +40,7 @@
             border: 2px solid darkgrey;
             margin: 0 auto;
             overflow: scroll;
-            font-size: 4vw;
+            font-size: 4vh;
         }
 
         #msgbox {
